prod/monitor/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor
  namespace: monitoring
spec:
  tls:
  - hosts:
    - monitor.sdpaks.equinor.com
    secretName: monitor-tls
  rules:
    - host: monitor.sdpaks.equinor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitor
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-auth
  namespace: monitoring
spec:
  tls:
  - hosts:
    - monitor.sdpaks.equinor.com
    secretName: monitor-tls
  rules:
    - host: monitor.sdpaks.equinor.com
      http:
        paths:
          - path: /oauth2 
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy-sdp
                port:
                  number: 4180
